test/bad/missing_first_data_label.ulm
.data
    ; Missing a label for the first instruction
    .ascii "foo"